[package]
name = "curl-crustls"
version = "0.3.0"
authors = ["Jacob Hoffman-Andrews <github@hoffman-andrews.com>", "Stephen M. Coakley <me@stephencoakley.com>"]
description = "C-to-rustls bindings (fork for curl-rust)"
edition = "2018"
links = "crustls"

[dependencies]
# Keep in sync with RUSTLS_CRATE_VERSION in lib.rs
rustls = { version = "^0.19.0", features = [ "dangerous_configuration" ] }
webpki = "0.21"
libc = "0.2"
rustls-native-certs = "0.5.0"
sct = "0.6.0"
rustls-pemfile = "0.2.0"

[dev_dependencies]
cbindgen = "*"

[lib]
name = "crustls"
crate-type = ["lib", "staticlib"]
